<resources>
    <string name="app_name">AndroidQuerySample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="employee_register">社員登録</string>
    <string name="employee_search">社員検索</string>
    <string name="employee_code">社員コード</string>
    <string name="employee_name">社員名</string>

    <string name="register_button">登録</string>
    <string name="search_button">検索</string>
    <string name="search_result">検索結果</string>

    <string name="register_success">登録しました</string>
    <string name="not_found">該当するデータが見つかりませんでした</string>

</resources>
